fix text align

--- a/leasson13/clw3/styles.css
+++ b/leasson13/clw3/styles.css
@@ -2,15 +2,16 @@ body {
   font-family: Arial, sans-serif;
 }
 
+
+
 .header-text {
-  display: inline-block;
   margin: 0;
   padding: 16px;
   text-align: center;
   text-transform: uppercase;
   font-size: 96px;
   font-weight: 700;
-  background: linear-gradient(45deg, rgba(244, 235, 0, 1) 0, rgba(255, 0, 0, 1) 100%);
+  background: linear-gradient(45deg, rgba(255, 255, 0, 1) 0, rgba(255, 0, 0, 1) 80%);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-background-clip: text;
